Bug 321937 - Presets using autobrush also link to last selected predefined brush
Summary: Presets using autobrush also link to last selected predefined brush
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 321946 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-07-04 08:52 UTC by animtim
Modified: 2013-09-03 11:16 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description animtim 2013-07-04 08:52:26 UTC
Weirdly, after I removed the gih files I did notice many presets "red-crossed", but those presets were for some using autobrush!

As if every preset using autobrush also remembers the selected predefined brush, although it doesn't use it at all (as it uses autobrush mask instead...).

So I selected each autobrush-based preset marked invalid, as they still 
loaded fine, selected another predefined brush and back to autobrush and 
re-saved them. No more red-cross then.

Reproducible: Always

Steps to Reproduce:
1.select a predefined brush, then select autobrush, save preset, close Krita.
2.Delete the predefined brush file you selected at first step.
3.Open Krita, the autobrush preset just saved is now red-crossed.
Comment 1 Halla Rempt 2013-07-04 11:03:21 UTC
*** Bug 321946 has been marked as a duplicate of this bug. ***
Comment 2 Halla Rempt 2013-07-04 11:03:45 UTC
Marking as release blocker, it's really a problem for users.
Comment 3 Dmitry Kazakov 2013-09-03 11:16:03 UTC
Git commit 843841305f3958d187d416572987d73920211e5d by Dmitry Kazakov.
Committed on 03/09/2013 at 11:12.
Pushed by dkazakov into branch 'master'.

Fixed false marking brush presets as invalid

The property should be *always* written

M  +5    -3    krita/plugins/paintops/libpaintop/kis_brush_option.cpp

http://commits.kde.org/calligra/843841305f3958d187d416572987d73920211e5d