Fixed false marking brush presets as invalid

The property should be *always* written

BUG:321937